Fixed: 1. The language picker form elements were not wrapped in block level elements. This does not validate. 2. When using defaultImage in the button slot, there is not alt tag. This does not validate.
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/branches/1.5@3496 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a-components.css
+++ b/web/css/a-components.css
@@ -337,7 +337,7 @@ background:#fff;
 
 .a-ui.a-global-toolbar .a-controls .a-login .a-login-user,
 .a-ui.a-global-toolbar .a-controls .a-login .a-login-language { margin: 0 10px 0 0; }
-
+.a-ui.a-global-toolbar .a-controls .a-login .a-language-form .a-form-row { margin: 0; }
 .a-ui.a-global-toolbar .a-controls li.the-apostrophe-container,
 .a-ui.a-global-toolbar .a-controls li#a-create-page-button-menu,
 .a-ui.a-global-toolbar .a-controls li:last-child { border: none; }
